--- a/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:58+0000\n"
+"POT-Creation-Date: 2022-12-28 10:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,11 +20,11 @@ msgstr ""
 
 #: activity_validation/validations/basic.py:12
 msgid "TPM Partner selected for staff activity"
-msgstr ""
+msgstr "Socio de TPM seleccionado para la actividad del personal"
 
 #: activity_validation/validations/basic.py:23
 msgid "Staff members do not belong to the selected partner"
-msgstr ""
+msgstr "Los miembros del personal no pertenecen al socio seleccionado"
 
 #: activity_validation/validations/basic.py:36
 #, python-format
@@ -32,6 +32,9 @@ msgid ""
 "You've selected a PD/SPD and unselected some of it's corresponding partners, "
 "please either remove the PD or add the partners back before saving: %s"
 msgstr ""
+"Seleccionó un PD/SPD y anuló la selección de algunos de sus socios "
+"correspondientes, elimine el PD o vuelva a agregar los socios antes de "
+"guardar: %s"
 
 #: activity_validation/validations/basic.py:55
 #, python-format
@@ -39,116 +42,118 @@ msgid ""
 "You've selected a PD/SPD and unselected some of it's corresponding outputs, "
 "please either remove the PD or add the outputs back before saving: %s"
 msgstr ""
+"Seleccionó un PD/SPD y deseleccionó algunas de sus salidas correspondientes, "
+"elimine el PD o vuelva a agregar las salidas antes de guardar: %s"
 
 #: activity_validation/validations/state.py:11
 msgid "Partner is not defined for TPM activity"
-msgstr ""
+msgstr "El socio no está definido para la actividad de TPM"
 
 #: activity_validation/validations/state.py:17
 msgid "At least one Partner, CP Output or PD/SPD should be added"
-msgstr ""
+msgstr "Se debe agregar al menos un socio, salida de CP o PD/SPD"
 
 #: activity_validation/validations/state.py:23
 msgid "Rejection reason should be provided."
-msgstr ""
+msgstr "Debe indicarse el motivo del rechazo."
 
 #: activity_validation/validations/state.py:29
 msgid "Cancellation reason should be provided."
-msgstr ""
+msgstr "Debe indicarse el motivo de la cancelación."
 
 #: activity_validation/validations/state.py:35
 msgid "Report reject reason should be provided."
-msgstr ""
+msgstr "Debe indicarse el motivo del rechazo del informe."
 
 #: activity_validation/validations/state.py:41
 msgid "At least one question should be enabled."
-msgstr ""
+msgstr "Al menos una pregunta debe estar habilitada."
 
 #: activity_validation/validations/state.py:47
 msgid "At least one checklist should be completed."
-msgstr ""
+msgstr "Se debe completar al menos una lista de verificación."
 
 #: activity_validation/validations/state.py:59
 msgid "At least one summary finding should be completed."
-msgstr ""
+msgstr "Debe completarse al menos un resultado resumido."
 
 #: activity_validation/validator.py:42
 #, python-format
 msgid "Required fields not completed in %(status)s: %(fields)s"
-msgstr ""
+msgstr "Campos obligatorios no completados en %(status)s: %(fields)s"
 
 #: activity_validation/validator.py:55
 #, python-format
 msgid "Cannot change fields while in %(status)s: %(field)s"
-msgstr ""
+msgstr "No se pueden cambiar los campos mientras está en %(status)s: %(field)s"
 
 #: models.py:44
 msgid "Prioritization Criteria"
-msgstr ""
+msgstr "Criterios de Priorización"
 
 #: models.py:45
 msgid "Methodology Notes & Standards"
-msgstr ""
+msgstr "Notas de metodología"
 
 #: models.py:46
 msgid "Target Visits For The Year"
-msgstr ""
+msgstr "Visitas objetivo para el año"
 
 #: models.py:48
 msgid "Modalities"
-msgstr ""
+msgstr "Modalidades"
 
 #: models.py:49
 msgid "Partner Engagement"
-msgstr ""
+msgstr "Compromiso de socios"
 
 #: models.py:50
 msgid "Other Aspects of the Field Monitoring Plan"
-msgstr ""
+msgstr "Otros Aspectos del Plan de Monitoreo de Campo"
 
 #: models.py:55
 msgid "Year Plan"
-msgstr ""
+msgstr "Plan anual"
 
 #: models.py:56
 msgid "Year Plans"
-msgstr ""
+msgstr "planes anuales"
 
 #: models.py:76 models.py:252
 msgid "Partner"
-msgstr ""
+msgstr "pareja"
 
 #: models.py:78
 msgid "CP Output"
-msgstr ""
+msgstr "Salida CP"
 
 #: models.py:80
 msgid "Intervention"
-msgstr ""
+msgstr "Intervención"
 
 #: models.py:92
 msgid "Question"
-msgstr ""
+msgstr "Pregunta"
 
 #: models.py:94
 msgid "Is Active"
-msgstr ""
+msgstr "Está activo"
 
 #: models.py:95
 msgid "Specific Details To Probe"
-msgstr ""
+msgstr "Detalles específicos para sondear"
 
 #: models.py:98
 msgid "Question Template"
-msgstr ""
+msgstr "Plantilla de preguntas"
 
 #: models.py:99
 msgid "Question Templates"
-msgstr ""
+msgstr "Plantillas de preguntas"
 
 #: models.py:149
 msgid "Staff"
-msgstr ""
+msgstr "Personal"
 
 #: models.py:150
 msgid "TPM"
@@ -160,71 +165,71 @@ msgstr ""
 
 #: models.py:164
 msgid "Checklist"
-msgstr ""
+msgstr "Lista de verificación"
 
 #: models.py:165
 msgid "Review"
-msgstr ""
+msgstr "Revisión"
 
 #: models.py:166
 msgid "Assigned"
-msgstr ""
+msgstr "Asignado"
 
 #: models.py:167
 msgid "Data Collection"
-msgstr ""
+msgstr "Recopilación de datos"
 
 #: models.py:168
 msgid "Report Finalization"
-msgstr ""
+msgstr "Finalización del informe"
 
 #: models.py:169
 msgid "Submitted"
-msgstr ""
+msgstr "Enviado"
 
 #: models.py:170
 msgid "Completed"
-msgstr ""
+msgstr "Completado"
 
 #: models.py:171
 msgid "Cancelled"
-msgstr ""
+msgstr "Cancelado"
 
 #: models.py:223
 msgid "Reference Number"
-msgstr ""
+msgstr "Número de referencia"
 
 #: models.py:233
 msgid "TPM Partner"
-msgstr ""
+msgstr "Socio TPM"
 
 #: models.py:235
 msgid "Team Members"
-msgstr ""
+msgstr "Miembros del equipo"
 
 #: models.py:238
 msgid "Person Responsible"
-msgstr ""
+msgstr "Persona Responsable"
 
 #: models.py:241
 msgid "Field Office"
-msgstr ""
+msgstr "Oficina de campo"
 
 #: models.py:243
 msgid "Field Offices"
-msgstr ""
+msgstr "Oficinas de campo"
 
 #: models.py:245
 msgid "Sections"
-msgstr ""
+msgstr "Secciones"
 
 #: models.py:247
 msgid "Location"
-msgstr ""
+msgstr "Ubicación"
 
 #: models.py:249
 msgid "Site"
-msgstr ""
+msgstr "Sitio"
 
 #: models.py:255
 msgid "PD/SPD"
@@ -232,109 +237,109 @@ msgstr ""
 
 #: models.py:256
 msgid "Outputs"
-msgstr ""
+msgstr "Salidas"
 
 #: models.py:259
 msgid "Start Date"
-msgstr ""
+msgstr "Fecha de inicio"
 
 #: models.py:260
 msgid "End Date"
-msgstr ""
+msgstr "Fecha de finalización"
 
 #: models.py:262
 msgid "Status"
-msgstr ""
+msgstr "Estado"
 
 #: models.py:264 models.py:266
 msgid "Activity Attachments"
-msgstr ""
+msgstr "Archivos adjuntos de actividad"
 
 #: models.py:269
 msgid "Rejection reason"
-msgstr ""
+msgstr "Motivo de rechazo"
 
 #: models.py:270
 msgid "Report rejection reason"
-msgstr ""
+msgstr "Informar motivo de rechazo"
 
 #: models.py:271
 msgid "Cancellation reason"
-msgstr ""
+msgstr "Motivo de cancelación"
 
 #: models.py:278
 msgid "Monitoring Activity"
-msgstr ""
+msgstr "Actividad de seguimiento"
 
 #: models.py:279
 msgid "Monitoring Activities"
-msgstr ""
+msgstr "Actividades de seguimiento"
 
 #: models.py:719
 msgid "Monitoring Activity Action Point"
-msgstr ""
+msgstr "Actividad de supervisión Punto de acción"
 
 #: models.py:720
 msgid "Monitoring Activity Action Points"
-msgstr ""
+msgstr "Puntos de acción de la actividad de supervisión"
 
 #: serializers.py:36 serializers.py:238
 msgid "History"
-msgstr ""
+msgstr "Historia"
 
 #: serializers.py:163
 msgid "Document Type"
-msgstr ""
+msgstr "Tipo de documento"
 
 #: serializers.py:191
 #, python-format
 msgid "[Inactive] %s"
-msgstr ""
+msgstr "[Inactivo] %s"
 
 #: serializers.py:213
 msgid "Reference No."
-msgstr ""
+msgstr "Número de referencia"
 
 #: serializers.py:216
 msgid "Related Partner"
-msgstr ""
+msgstr "Socio relacionado"
 
 #: serializers.py:219
 msgid "Related PD/SPD"
-msgstr ""
+msgstr "PD/SPD relacionados"
 
 #: serializers.py:222
 msgid "Related CP Output"
-msgstr ""
+msgstr "Salida de CP relacionada"
 
 #: serializers.py:227
 msgid "Section of Assignee"
-msgstr ""
+msgstr "Sección del cesionario"
 
 #: serializers.py:231
 msgid "Office of Assignee"
-msgstr ""
+msgstr "Oficina del cesionario"
 
 #: serializers.py:234
 msgid "Action Point Category"
-msgstr ""
+msgstr "Categoría de punto de acción"
 
 #: serializers.py:240
 msgid "Link"
-msgstr ""
+msgstr "Enlace"
 
 #: serializers.py:249
 msgid "Priority"
-msgstr ""
+msgstr "Prioridad"
 
 #: views.py:77
 msgid "Annual Field Monitoring Rationale"
-msgstr ""
+msgstr "Justificación del monitoreo anual de campo"
 
 #: views.py:133
 msgid "Templates"
-msgstr ""
+msgstr "Plantillas"
 
 #: views.py:329
 msgid "Attachments"
-msgstr ""
+msgstr "Archivos adjuntos"
