--- a/src/etools/applications/field_monitoring/planning/locale/ro/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ro/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-27 09:58+0000\n"
+"POT-Creation-Date: 2022-12-28 10:16+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,11 +21,11 @@ msgstr ""
 
 #: activity_validation/validations/basic.py:12
 msgid "TPM Partner selected for staff activity"
-msgstr ""
+msgstr "Partener TPM selectat pentru activitatea personalului"
 
 #: activity_validation/validations/basic.py:23
 msgid "Staff members do not belong to the selected partner"
-msgstr ""
+msgstr "Membrii personalului nu aparțin partenerului selectat"
 
 #: activity_validation/validations/basic.py:36
 #, python-format
@@ -33,6 +33,9 @@ msgid ""
 "You've selected a PD/SPD and unselected some of it's corresponding partners, "
 "please either remove the PD or add the partners back before saving: %s"
 msgstr ""
+"Ați selectat un PD/SPD și ați deselectat unii dintre partenerii "
+"corespunzători acestuia, vă rugăm fie să eliminați PD, fie să adăugați "
+"partenerii înapoi înainte de a salva: %s"
 
 #: activity_validation/validations/basic.py:55
 #, python-format
@@ -40,116 +43,119 @@ msgid ""
 "You've selected a PD/SPD and unselected some of it's corresponding outputs, "
 "please either remove the PD or add the outputs back before saving: %s"
 msgstr ""
+"Ați selectat un PD/SPD și ați deselectat unele dintre ieșirile "
+"corespunzătoare ale acestuia, vă rugăm fie să eliminați PD, fie să adăugați "
+"ieșirile înapoi înainte de a salva: %s"
 
 #: activity_validation/validations/state.py:11
 msgid "Partner is not defined for TPM activity"
-msgstr ""
+msgstr "Partenerul nu este definit pentru activitatea TPM"
 
 #: activity_validation/validations/state.py:17
 msgid "At least one Partner, CP Output or PD/SPD should be added"
-msgstr ""
+msgstr "Ar trebui adăugat cel puțin un partener, ieșire CP sau PD/SPD"
 
 #: activity_validation/validations/state.py:23
 msgid "Rejection reason should be provided."
-msgstr ""
+msgstr "Trebuie furnizat motivul respingerii."
 
 #: activity_validation/validations/state.py:29
 msgid "Cancellation reason should be provided."
-msgstr ""
+msgstr "Trebuie furnizat motivul de anulare."
 
 #: activity_validation/validations/state.py:35
 msgid "Report reject reason should be provided."
-msgstr ""
+msgstr "Trebuie furnizat motivul respingerii raportului."
 
 #: activity_validation/validations/state.py:41
 msgid "At least one question should be enabled."
-msgstr ""
+msgstr "Cel puțin o întrebare ar trebui să fie activată."
 
 #: activity_validation/validations/state.py:47
 msgid "At least one checklist should be completed."
-msgstr ""
+msgstr "Ar trebui completată cel puțin o listă de verificare."
 
 #: activity_validation/validations/state.py:59
 msgid "At least one summary finding should be completed."
-msgstr ""
+msgstr "Ar trebui completată cel puțin o constatare rezumată."
 
 #: activity_validation/validator.py:42
 #, python-format
 msgid "Required fields not completed in %(status)s: %(fields)s"
-msgstr ""
+msgstr "Câmpurile obligatorii nu au fost completate în %(status)s: %(fields)s"
 
 #: activity_validation/validator.py:55
 #, python-format
 msgid "Cannot change fields while in %(status)s: %(field)s"
-msgstr ""
+msgstr "Nu se pot schimba câmpurile în %(status)s: %(field)s"
 
 #: models.py:44
 msgid "Prioritization Criteria"
-msgstr ""
+msgstr "Criterii de prioritizare"
 
 #: models.py:45
 msgid "Methodology Notes & Standards"
-msgstr ""
+msgstr "Note de metodologie"
 
 #: models.py:46
 msgid "Target Visits For The Year"
-msgstr ""
+msgstr "Vizite țintă pentru anul"
 
 #: models.py:48
 msgid "Modalities"
-msgstr ""
+msgstr "Modalitate"
 
 #: models.py:49
 msgid "Partner Engagement"
-msgstr ""
+msgstr "Implicare partener"
 
 #: models.py:50
 msgid "Other Aspects of the Field Monitoring Plan"
-msgstr ""
+msgstr "Alte aspecte ale planului de monitorizare pe teren"
 
 #: models.py:55
 msgid "Year Plan"
-msgstr ""
+msgstr "Planul anual"
 
 #: models.py:56
 msgid "Year Plans"
-msgstr ""
+msgstr "Planuri anuale"
 
 #: models.py:76 models.py:252
 msgid "Partner"
-msgstr ""
+msgstr "Partener"
 
 #: models.py:78
 msgid "CP Output"
-msgstr ""
+msgstr "Ieșire CP"
 
 #: models.py:80
 msgid "Intervention"
-msgstr ""
+msgstr "Intervenție"
 
 #: models.py:92
 msgid "Question"
-msgstr ""
+msgstr "Întrebare"
 
 #: models.py:94
 msgid "Is Active"
-msgstr ""
+msgstr "Este activ"
 
 #: models.py:95
 msgid "Specific Details To Probe"
-msgstr ""
+msgstr "Detalii specifice pentru a sonda"
 
 #: models.py:98
 msgid "Question Template"
-msgstr ""
+msgstr "Șablon de întrebare"
 
 #: models.py:99
 msgid "Question Templates"
-msgstr ""
+msgstr "Șabloane de întrebări"
 
 #: models.py:149
 msgid "Staff"
-msgstr ""
+msgstr "Personal"
 
 #: models.py:150
 msgid "TPM"
@@ -161,67 +167,67 @@ msgstr ""
 
 #: models.py:164
 msgid "Checklist"
-msgstr ""
+msgstr "Lista de verificare"
 
 #: models.py:165
 msgid "Review"
-msgstr ""
+msgstr "Recenzie"
 
 #: models.py:166
 msgid "Assigned"
-msgstr ""
+msgstr "Atribuit"
 
 #: models.py:167
 msgid "Data Collection"
-msgstr ""
+msgstr "Colectarea datelor"
 
 #: models.py:168
 msgid "Report Finalization"
-msgstr ""
+msgstr "Finalizarea raportului"
 
 #: models.py:169
 msgid "Submitted"
-msgstr ""
+msgstr "Demis"
 
 #: models.py:170
 msgid "Completed"
-msgstr ""
+msgstr "Terminat"
 
 #: models.py:171
 msgid "Cancelled"
-msgstr ""
+msgstr "Anulat"
 
 #: models.py:223
 msgid "Reference Number"
-msgstr ""
+msgstr "Număr de referință"
 
 #: models.py:233
 msgid "TPM Partner"
-msgstr ""
+msgstr "Partener TPM"
 
 #: models.py:235
 msgid "Team Members"
-msgstr ""
+msgstr "Membrii echipei"
 
 #: models.py:238
 msgid "Person Responsible"
-msgstr ""
+msgstr "Persoană responsabilă"
 
 #: models.py:241
 msgid "Field Office"
-msgstr ""
+msgstr "Biroul de teren"
 
 #: models.py:243
 msgid "Field Offices"
-msgstr ""
+msgstr "Birouri pe teren"
 
 #: models.py:245
 msgid "Sections"
-msgstr ""
+msgstr "Secțiuni"
 
 #: models.py:247
 msgid "Location"
-msgstr ""
+msgstr "Locație"
 
 #: models.py:249
 msgid "Site"
@@ -233,92 +239,92 @@ msgstr ""
 
 #: models.py:256
 msgid "Outputs"
-msgstr ""
+msgstr "Ieșiri"
 
 #: models.py:259
 msgid "Start Date"
-msgstr ""
+msgstr "Data de începere"
 
 #: models.py:260
 msgid "End Date"
-msgstr ""
+msgstr "Data de încheiere"
 
 #: models.py:262
 msgid "Status"
-msgstr ""
+msgstr "Stare"
 
 #: models.py:264 models.py:266
 msgid "Activity Attachments"
-msgstr ""
+msgstr "Atașamente de activitate"
 
 #: models.py:269
 msgid "Rejection reason"
-msgstr ""
+msgstr "Motivul respingerii"
 
 #: models.py:270
 msgid "Report rejection reason"
-msgstr ""
+msgstr "Raportați motivul respingerii"
 
 #: models.py:271
 msgid "Cancellation reason"
-msgstr ""
+msgstr "Motivul anulării"
 
 #: models.py:278
 msgid "Monitoring Activity"
-msgstr ""
+msgstr "Activitatea de monitorizare"
 
 #: models.py:279
 msgid "Monitoring Activities"
-msgstr ""
+msgstr "Activități de monitorizare"
 
 #: models.py:719
 msgid "Monitoring Activity Action Point"
-msgstr ""
+msgstr "Punctul de acțiune al activității de monitorizare"
 
 #: models.py:720
 msgid "Monitoring Activity Action Points"
-msgstr ""
+msgstr "Monitorizarea punctelor de acțiune ale activității"
 
 #: serializers.py:36 serializers.py:238
 msgid "History"
-msgstr ""
+msgstr "Istorie"
 
 #: serializers.py:163
 msgid "Document Type"
-msgstr ""
+msgstr "Tip de document"
 
 #: serializers.py:191
 #, python-format
 msgid "[Inactive] %s"
-msgstr ""
+msgstr "[Inactiv] %s"
 
 #: serializers.py:213
 msgid "Reference No."
-msgstr ""
+msgstr "Nr. de referință."
 
 #: serializers.py:216
 msgid "Related Partner"
-msgstr ""
+msgstr "Partener înrudit"
 
 #: serializers.py:219
 msgid "Related PD/SPD"
-msgstr ""
+msgstr "PD/SPD conexe"
 
 #: serializers.py:222
 msgid "Related CP Output"
-msgstr ""
+msgstr "Ieșire CP asociată"
 
 #: serializers.py:227
 msgid "Section of Assignee"
-msgstr ""
+msgstr "Secțiunea Cesionarului"
 
 #: serializers.py:231
 msgid "Office of Assignee"
-msgstr ""
+msgstr "Biroul Cesionarului"
 
 #: serializers.py:234
 msgid "Action Point Category"
-msgstr ""
+msgstr "Categoria punct de acțiune"
 
 #: serializers.py:240
 msgid "Link"
@@ -326,16 +332,16 @@ msgstr ""
 
 #: serializers.py:249
 msgid "Priority"
-msgstr ""
+msgstr "Prioritate"
 
 #: views.py:77
 msgid "Annual Field Monitoring Rationale"
-msgstr ""
+msgstr "Motivul monitorizării anuale pe teren"
 
 #: views.py:133
 msgid "Templates"
-msgstr ""
+msgstr "Șabloane"
 
 #: views.py:329
 msgid "Attachments"
-msgstr ""
+msgstr "Atașamente"
