remove ro translations; fix fr .po

--- a/src/etools/applications/field_monitoring/data_collection/locale/fr/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/data_collection/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-28 09:43+0000\n"
+"POT-Creation-Date: 2023-02-03 14:33+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -138,7 +138,7 @@ msgid ""
 "%(target_id)s"
 msgstr ""
 "Impossible de trouver les résultats pour la question %(question_id)s pour "
-"%(niveau)s %(target_id)s"
+"%(level)s %(target_id)s"
 
 #: offline/helpers.py:91
 msgid "Ensure this field has no more than 100 characters."
