add new field for strategy document other details

--- a/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
@@ -1080,6 +1080,11 @@ msgstr "تنمية القدرات"
 msgid "Other Info"
 msgstr "معلومات أخرى"
 
+#, fuzzy
+#| msgid "Agreement Details"
+msgid "Other Document Details"
+msgstr "تفاصيل الاتفاقية"
+
 msgid "Other Partners Involved"
 msgstr "شركاء آخرون منخرطون"
 
