--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -1084,6 +1084,11 @@ msgstr "Развитие потенциала"
 msgid "Other Info"
 msgstr "Другая информация"
 
+#, fuzzy
+#| msgid "Agreement Details"
+msgid "Other Document Details"
+msgstr "Детали соглашения"
+
 msgid "Other Partners Involved"
 msgstr "Участвуют другие партнеры"
 
